# studio

./: .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION_STRUCTURE.md  MAKEPAD_QUICK_REF.md  MOFA_DORA_BRIDGE_GUIDE.md  README.md  README_cn.md  README_cn_old.md  lbc-claude-skill.md  mofa-studio.md  monitor-dora-logs.sh  tessl.json  vibecoding.md
apps/mofa-cast/: Cargo.toml  README.md
apps/mofa-cast/dataflow/: batch-tts.yml  multi-voice-batch-tts-graph.html  multi-voice-batch-tts.yml  test-direct-kokoro-backup.yml  test-direct-primespeech-en-failed.yml  test-direct.yml  test-mock.yml  test-primespeech-simple.yml  test-simple.yml
apps/mofa-cast/docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  HISTORY.md  IMPLEMENTATION_STATUS.md  SCRIPT_OPTIMIZATION_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
apps/mofa-cast/node/: voice_router.py
apps/mofa-cast/src/: audio_mixer.rs  dora_integration.rs  dora_process_manager.rs  lib.rs  recent_files.rs  script_templates.rs  transcript_parser.rs  tts_batch.rs
apps/mofa-cast/src/screen/: design.rs  main.rs  mod.rs
apps/mofa-cast/test_samples/: ceshi_cn.txt  sample_json.json  sample_markdown.md  sample_plain.txt
apps/mofa-debate/dataflow/: debate_config_con.toml  debate_config_judge.toml  debate_config_pro.toml  voice-chat.yml
apps/mofa-fm/dataflow/: DORA_STOP_HANG_ANALYSIS.md  voice-chat.canvas  voice-chat.yml
apps/mofa-fm/src/: dora_integration.rs  screen.rs
apps/mofa-fm/src/screen/: mod.rs  (+1 more)
apps/mofa-hello/: Cargo.toml
apps/mofa-hello/src/: lib.rs
apps/mofa-rss-newscaster/: Cargo.toml
apps/mofa-rss-newscaster/agents/anchor-assigner/: README.md  pyproject.toml
apps/mofa-rss-newscaster/agents/anchor-assigner/anchor_assigner/: __init__.py  main.py
apps/mofa-rss-newscaster/agents/anchor-assigner/tests/: test_main.py
apps/mofa-rss-newscaster/agents/link-content-scripter/: README.md  pyproject.toml
apps/mofa-rss-newscaster/agents/link-content-scripter/link_content_scripter/: __init__.py  main.py
apps/mofa-rss-newscaster/agents/link-content-scripter/tests/: test_main.py
apps/mofa-rss-newscaster/agents/rss-fetcher/: README.md  pyproject.toml
apps/mofa-rss-newscaster/agents/rss-fetcher/rss_fetcher/: __init__.py  main.py
apps/mofa-rss-newscaster/agents/rss-fetcher/tests/: test_main.py
apps/mofa-rss-newscaster/agents/rss-headline-scripter/: README.md  pyproject.toml
apps/mofa-rss-newscaster/agents/rss-headline-scripter/rss_headline_scripter/: main.py
apps/mofa-rss-newscaster/dataflow/: dataflow.yml
apps/mofa-rss-newscaster/src/: dora_integration.rs  lib.rs
apps/mofa-rss-newscaster/src/screen/: mod.rs
docs/: mofa-himalaya-design.md
libs/dora-common/: README.md  pyproject.toml
models/setup-local-models/: DEPENDENCIES.md  install_all_packages.sh
mofa-dora-bridge/: Cargo.toml
mofa-dora-bridge/src/: controller.rs  dispatcher.rs  lib.rs
mofa-dora-bridge/src/widgets/: audio_player.rs  cast_controller.rs  mod.rs  prompt_input.rs  system_log.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs
mofa-studio-shell/src/widgets/: dashboard.rs  sidebar.rs
mofa-widgets/src/: app_trait.rs  lib.rs
node-hub/dora-asr/: pyproject.toml
node-hub/dora-asr/dora_asr/: main.py
node-hub/dora-asr/dora_asr/engines/: funasr.py  funasr_gpu.py  whisper.py
node-hub/dora-common/: pyproject.toml
node-hub/dora-common/dora_common/: __init__.py  logging.py
node-hub/dora-conference-bridge/: API.md  CONTROL_COMMANDS_SUMMARY.md  Cargo.toml
node-hub/dora-conference-bridge/src/: main.rs
node-hub/dora-conference-controller/: Cargo.toml  README.md
node-hub/dora-conference-controller/dora-conference-bridge/: CONTROLS.md  Cargo.toml  README.md
node-hub/dora-conference-controller/src/: lib.rs  main.rs  main.rs.backup
node-hub/dora-conference-controller/src/policies/: mod.rs  unified_ratio.rs
node-hub/dora-conference-controller/src/policies/tests/: unified_ratio_test.rs
node-hub/dora-kokoro-tts/: README.md  batch_synthesize.py  pyproject.toml  test_backends.py
node-hub/dora-kokoro-tts/dora_kokoro_tts/: main.py
node-hub/dora-maas-client/: API.md  Cargo.toml  Cargo_streaming.toml  ENABLE_STREAMING.md  IMPLEMENTATION_SUMMARY_REVERTED.md  MCP_TOOL_FIXES.md  README.md  STREAMING.md  test_streaming.rs
node-hub/dora-maas-client/examples/: test_manual_sse.rs
node-hub/dora-maas-client/src/: client.rs  config.rs  main.rs  main.rs.bak  segmenter.rs  streaming.rs  tool.rs
node-hub/dora-primespeech/: download_primespeech_models.py  pyproject.toml  requirements_simple.txt
node-hub/dora-primespeech/dora_primespeech/: config.py  main.py  moyoyo_tts_wrapper_streaming_fix.py
node-hub/dora-speechmonitor/: pyproject.toml
node-hub/dora-speechmonitor/dora_speechmonitor/: main.py  state_machine.py  vad.py
node-hub/dora-text-segmenter/: __main__.py  pyproject.toml
node-hub/dora-text-segmenter/dora_text_segmenter/: main.py  main_sequential.py  multi_participant_segmenter.py  multi_participant_segmenter.py.backup  queue_based_segmenter.py  simple_passthrough.py
node-hub/dora-voice-router/: README.md  pyproject.toml
node-hub/dora-voice-router/dora_voice_router/: __init__.py  main.py
skills/00-mofa-studio-getting-started/: SKILL.md
skills/00-mofa-studio-getting-started/references/: pitfalls.md  quickstart.md  repo-map.md
skills/01-mofa-studio-core/: SKILL.md
skills/01-mofa-studio-core/references/: architecture.md
skills/02-mofa-studio-app-development/: SKILL.md
skills/02-mofa-studio-app-development/references/: app-workflow.md  shell-integration.md
skills/03-mofa-studio-dataflow/: SKILL.md
skills/03-mofa-studio-dataflow/references/: dataflow-conventions.md  dataflow-debugging.md
skills/04-mofa-studio-ui-patterns/: SKILL.md
skills/04-mofa-studio-ui-patterns/references/: ui-workflow.md
skills/05-mofa-studio-audio/: SKILL.md
skills/06-mofa-studio-settings/: SKILL.md
skills/07-mofa-studio-deployment/: SKILL.md
skills/07-mofa-studio-deployment/references/: deploy-edge-cases.md  manual-run.md
skills/08-mofa-studio-reference/: SKILL.md
skills/99-mofa-studio-evolution/: SKILL.md
(+8 files in other folders)
