[package]
name = "mofa-cast"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
parking_lot.workspace = true
log.workspace = true
sysinfo.workspace = true
crossbeam-channel.workspace = true

# File dialog
rfd = "0.14"

# Open files/URLs with system default
open = "5.0"

# Config directories
dirs = "5.0"

# Dora integration
mofa-dora-bridge = { path = "../../mofa-dora-bridge" }
