[package]
name = "mofa-rss-newscaster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
mofa-dora-bridge = { path = "../../mofa-dora-bridge" }
mofa-settings = { path = "../mofa-settings" }
parking_lot.workspace = true
log.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
feed-rs = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
