[package]
name = "dora-conference-controller"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace]

[lib]
name = "dora_conference_controller"
path = "src/lib.rs"

[[bin]]
name = "dora-conference-controller"
path = "src/main.rs"

[dependencies]
dora-node-api = "0.4.1"
dora-core = "0.4.1"
eyre = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
