[package]
name = "dora-conference-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[[bin]]
name = "dora-conference-bridge"
path = "src/main.rs"

[dependencies]
dora-node-api = { git = "https://github.com/dora-rs/dora.git", tag = "v0.3.12" }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
