[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-fetcher"
version = "0.1.0"
description = "MoFA agent that fetches and parses RSS feeds from URLs"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "numpy<2.0.0",
    "pyarrow>=5.0.0",
    "mofa-core",
    "dora-rs",
    "feedparser>=6.0.0",
]

[project.scripts]
rss-fetcher = "rss_fetcher.main:main"

[tool.setuptools.packages.find]
include = ["rss_fetcher*"]
